[gd_scene load_steps=5 format=3 uid="uid://bywqu38yyk5sm"]

[ext_resource type="PackedScene" uid="uid://dxnkfr6ruwvfk" path="res://Scenes/Inventory/on_screen_equipment_slot.tscn" id="1_0rivf"]
[ext_resource type="Script" path="res://Scripts/OnScreenUI.gd" id="1_jv7pn"]
[ext_resource type="StyleBox" uid="uid://i1vxbacyfw0y" path="res://Resources/Styles/HealtBar/backgroundstylebox.tres" id="2_hn0ma"]
[ext_resource type="StyleBox" uid="uid://0j2gvdi2ikrb" path="res://Resources/Styles/HealtBar/fill.stylebox" id="3_ww0p5"]

[node name="OnScreenUI" type="CanvasLayer"]
script = ExtResource("1_jv7pn")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 16)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = ExtResource("2_hn0ma")
theme_override_styles/fill = ExtResource("3_ww0p5")
step = 1.0
value = 20.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="RightSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_0rivf")]
unique_name_in_owner = true
layout_mode = 2
slot_name = "Right Hand"

[node name="LeftSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_0rivf")]
unique_name_in_owner = true
layout_mode = 2
slot_name = "Left Hand"

[node name="PotionSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_0rivf")]
unique_name_in_owner = true
layout_mode = 2
slot_name = "Potion"

[node name="SpellSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_0rivf")]
unique_name_in_owner = true
visible = false
layout_mode = 2
slot_name = "Spell"
